--- a/app/src/main/res/layout/activity_mix.xml
+++ b/app/src/main/res/layout/activity_mix.xml
@@ -735,7 +735,7 @@
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:outlineAmbientShadowColor="@color/colorAmbient"
-        android:outlineSpotShadowColor="@color/colorSpot"
+        android:outlineSpotShadowColor="@color/colorAmbient"
         app:cardCornerRadius="16dp"
         app:cardElevation="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -767,7 +767,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
         android:alpha="0"
-        android:background="#99E75A70"
+        android:background="@color/colorDelete"
         android:orientation="vertical"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
