--- a/app/src/main/res/drawable/gradient2.xml
+++ b/app/src/main/res/drawable/gradient2.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="0"
-        android:endColor="#6B98DC"
-        android:startColor="#C1D3FF"
+        android:endColor="@color/colorGradientPrimary"
+        android:startColor="@color/colorGradientSecondary"
     android:type="linear" />
 </shape>
