--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,5 +2,10 @@
 <resources>
 
     <color name="colorBackground">#FFAAAAAA</color>
-    <color name="colorAmbient">#80000000</color>
+    <color name="colorAmbient">#80737373</color>
+    <color name="colorGradientPrimary">#26000000</color>
+    <color name="colorGradientSecondary">#1A000000</color>
+    <color name="colorDelete">#99E81D3D</color>
+    <color name="colorLightButton">#FFAAAAAA</color>
+
 </resources>
