Add confirm dialog for abortion in ContentActivity

--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -288,7 +288,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/notosans_medium"
                         android:includeFontPadding="false"
-                        android:text="删除"
+                        android:text="放弃"
                         android:textColor="@color/black"
                         android:textSize="20sp"
                         app:layout_constraintBottom_toBottomOf="parent"
