--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,25 +85,24 @@
             android:id="@+id/reverseSwitchButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:foreground="?android:attr/selectableItemBackground"
             app:cardBackgroundColor="@color/transparent"
             app:cardCornerRadius="6dp"
             app:cardElevation="0dp"
-            android:layout_marginEnd="16dp"
             app:layout_constraintBottom_toBottomOf="@id/textView"
-            app:layout_constraintEnd_toEndOf="parent"
->
+            app:layout_constraintEnd_toEndOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_margin="3dp"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_margin="3dp">
 
                 <TextView
                     android:id="@+id/sortButtonText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="倒序排列"
+                    android:text="正序排列"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -111,10 +110,10 @@
                 <ImageView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
+                    android:layout_marginEnd="3dp"
                     android:src="@drawable/outline_sort_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/sortButtonText"
-                    android:layout_marginEnd="3dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
