--- a/app/src/main/res/layout/activity_mix.xml
+++ b/app/src/main/res/layout/activity_mix.xml
@@ -29,7 +29,7 @@
         android:layout_marginEnd="-9dp"
         android:src="@drawable/ic_help_msg"
         android:translationZ="20dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@id/gridLayout"
         app:layout_constraintEnd_toStartOf="@id/helpButton">
 
